# initium

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.jyq  FAQ.md  LICENSE  Makefile  README.md  SECURITY.md  dprint.json  go.mod  jyq.Dockerfile
.claude/: settings.json
.claude/commands/: release.md
.claude/skills/release/: SKILL.md
.github/workflows/: auto-tag.yml  ci.yml  integration.yml  release.yml
charts/initium/: Chart.yaml  artifacthub-repo.yml  values.yaml
charts/initium/templates/: _helpers.tpl  deployment.yaml
charts/initium/tests/: deployment_test.yaml
cmd/initium/: context.go  main.go
docs/: design.md  security.md  seeding.md  templating.md  usage.md
examples/config-render/: deployment.yaml
examples/nginx-waitfor/: deployment.yaml
examples/postgres-migrate-seed/: deployment.yaml
examples/postgres-seed/: deployment.yaml
examples/seed/: basic-seed.yaml  env-credentials-seed.yaml  phased-seed.yaml  sqlite-seed.yaml  structured-config-seed.yaml
examples/template-functions/: config.tmpl
internal/cmd/: exec.go  exec_test.go  fetch.go  fetch_test.go  migrate.go  migrate_test.go  render.go  render_test.go  seed.go  seed_test.go  waitfor.go  waitfor_test.go
internal/fetch/: fetch.go  fetch_test.go
internal/logging/: logging.go  logging_test.go
internal/render/: render.go  render_test.go
internal/retry/: retry.go  retry_test.go
internal/safety/: path.go  path_test.go
src/: duration.rs  logging.rs  main.rs  render.rs  retry.rs  safety.rs  template_funcs.rs
src/cmd/: exec.rs  fetch.rs  migrate.rs  mod.rs  render.rs  seed.rs  wait_for.rs
src/seed/: db.rs  executor.rs  hash.rs  mod.rs  schema.rs
tests/: README.md  docker-compose.yml  env_var_flags.rs  integration_test.rs
tests/fixtures/: seed-postgres.yaml  template.conf.tmpl
tests/input/: create-db-mysql.yaml  create-db-postgres.yaml  create-nonexistent-db-alpha-mysql.yaml  create-nonexistent-db-alpha-postgres.yaml  create-nonexistent-db-beta-mysql.yaml  create-nonexistent-db-beta-postgres.yaml  create-schema-postgres.yaml  seed-mysql-structured.yaml  seed-mysql.yaml  seed-postgres-structured.yaml
