[package]
name = "initium"
version = "2.0.1"
authors = ["Kitstream <opensource@kitstream.io>"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://docs.rs/initium"
edition = "2021"
exclude = ["tests/", "examples/", ".github/", "charts/", "docs/", ".claude/"]
homepage = "https://github.com/KitStream/initium"
keywords = ["kubernetes", "initcontainer", "sidecar", "container", "devops"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/KitStream/initium"
rust-version = "1.88"
description = "Swiss-army toolbox for Kubernetes initContainers — wait-for, seed, render, fetch in a single static Rust binary"

[[bin]]
name = "initium"
path = "src/main.rs"

[features]
default = ["sqlite", "postgres", "mysql"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:postgres"]
mysql = ["dep:mysql"]

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
minijinja = { version = "2", features = ["urlencode"] }
mysql = { version = "25", optional = true, default-features = false, features = ["minimal-rust", "rustls-tls", "buffer-pool"] }
postgres = { version = "0.19", optional = true }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
ureq = { version = "2", features = ["tls"], default-features = false }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
